--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,13 @@
 {
+    "files.associations": {
+        "*.ejs": "html",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp",
+        "regex": "cpp"
+    }
 }
